--- a/index.html
+++ b/index.html
@@ -20,25 +20,28 @@ header { background-color: #636631;
          color: #cc66cc;
          text-align: right;
          padding: 0 20px;
-         border-bottom: 2px solid #000000; }		 
+         border-bottom: 2px solid #000000; }
 nav { float: left;
-      width: 150px; }
+      width: 150px;
+    flex: 1;}
 aside { float: right;
-        width: 200px; }
+        width: 200px;
+      flex: 2; }
 main { margin: 0 210px 0 160px;
         padding: 1px 10px 20px 10px;
         background-color: #FFFFFF;
-        color: #006600; }
+        color: #006600;
+      flex: 7; }
 footer { font-size: .70em;
          text-align: center;
          color: #006600;
          background-color: #FFFFFF;
          padding-top: 10px;
-         clear: both; }		 
+         clear: both; }
 h1 { margin-top: 0;
      font-size: 3em;
      text-align: left;
-     text-shadow: 2px 2px 2px #000000; }	 
+     text-shadow: 2px 2px 2px #000000; }
 header a {font-size: 0.80em; }
 header a:link, header a:visited { color: #FFFFFF; }
 header a:focus, header a:hover { color: #EEEEEE; }
@@ -62,11 +65,16 @@ aside h3 { padding-bottom: 2px;
            font-size: 0.90em;
 		   color: #CC66CC; }
 .news { font-size: 0.80em;
-        margin: 10px; }		
-</style> 
+        margin: 10px; }
+#demo {display: flex;
+      flex-direction: row;}
+
+
+</style>
 </head>
 <body>
 <div id="container">
+
   <header>
     <span><a href="#content">Skip to Content</a></span>
     <h1>Door County Wildflowers</h1>
@@ -99,6 +107,6 @@ Newport Wilderness Society</a> sponsors free meadow hikes at 9am every Saturday.
     <footer> Copyright &copy; 2018 Door County Wild Flowers<br>
     </footer>
   </main>
-</div> 
+</div>
 </body>
 </html>
